Interaction of the menu with the sections of the site.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="shortcut icon" href="./img/faviconLight.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./menu.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Menu responsive</title>
 </head>
 
@@ -21,7 +23,8 @@
                     <span class="navbar-site__toggler__span"></span>
                 </button>
                 <a href="/" class="navbar-site__logo">
-                    <img src="./img/logo.png" class="navbar-site__logo-img" width="60" height="60" alt="Logo YeiiMaccDev">
+                    <img src="./img/logo.png" class="navbar-site__logo-img" width="60" height="60"
+                        alt="Logo YeiiMaccDev">
                     <strong class="navbar-site__logo-strong">YeiiMaccDev</strong>
                 </a>
                 <ul class="navbar-site__list">
@@ -65,9 +68,22 @@
         </div>
         <div style="min-height: 75px;"></div>
     </header>
+
     <main>
-        
+        <section class="section-100vh home" id="home">
+            <h1>Inicio</h1>
+        </section>
+        <section class="section-100vh ofertas" id="ofertas">
+            <h1>Ofertas</h1>
+        </section>
+        <section class="section-100vh productos" id="productos">
+            <h1>Productos</h1>
+        </section>
+        <section class="section-100vh nosotros" id="nosotros">
+            <h1>Nosotros</h1>
+        </section>
     </main>
+
     <footer>
 
     </footer>
